# vanilla-os-jade

./: example_config.json  meson.build
src/: main.py  meson.build  parser.py  vanilla-os-jade.in
src/functions/: base.py  meson.build  partitioning.py
src/utils/: command.py  device.py  meson.build  partition.py
